demo: deshabilitar seguridad temporalmente para sprint demo